# KnowledgeNow

./: Context_Agent.md  Fasterise_Knowledge_Base_24_03_16.txt  Fastrise_global_context.txt  PineconeVectorDB.ipynb  README.md  airtable.py  app.py  main_manual_debugging.ipynb  meeting_transcript.txt  pyproject.toml  requirements.txt  setup.py  store_index.py  template.py  tutor.py
Alejo/: main_manual_debugging.ipynb
Knowledgenow.egg-info/: PKG-INFO  SOURCES.txt
Ready_to_Test/: 1_Alejo_Answer_Agent_with-formatting.md  1_Alejo_system_prompt_context.md  2_Alejo_Context_Enrichment_Agent.md
data/: 2024-02-06 Dev Working Sesh - Scheduler Assistantcleaned.txt  2024-02-19 Dev Meeting - Outreach System Demo V1cleaned.txt  2024-02-21 Dev Meeting - Personalized Outreach System, Initial Promptscleaned.txt  2024-02-22 Fasterise Storycleaned.txt  2024-02-26 Dev Meeting - Update Massive Outreachcleaned.txt  2024-03-01 Dev Meeting - New Client Projects, Real Estate, Google Calendar automation, Follow up boss automationcleaned.txt  2024-03-05 Advocates Meeting - Profit Sharing, Real Estate Projectcleaned.txt  2024-03-05 Dev Meeting - Follow Up Boss text automation Assistant Promptscleaned.txt  2024-03-06 Discover Call Client - Real Estate Phase 1 and future integrationscleaned.txt  2024-03-07 Dev Meeting - Planning Scrum, organizingcleaned.txt  2024-03-07 GenExec Meeting - Client Updates, Dev products, Outreach progress part1cleaned.txt  2024-03-07 GenExec Meeting - Client Updates, Dev products, Outreach progress part2cleaned.txt  2024-03-12 Real Estate Email Campaign Prepcleaned.txt  (+8 more)
(+52 files in other folders)
