[tool.poetry]
name = "knowledgenow"
version = "0.1.0"
description = ""
authors = ["alejo, kuba, bartek"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
openai = "^1.14.3"
langchain = "^0.1.14"
langchain-openai = "^0.1.1"
langchain-community = "^0.0.30"
langchain-pinecone = "^0.0.3"
pydantic = "1.10.8"
pytube = "^15.0.0"
python-dotenv = "^1.0.1"
tiktoken = "^0.6.0"
pinecone-client = "^3.2.1"
flask = "^3.0.2"
langchainhub = "^0.1.15"
pyairtable = "^2.3.3"
langchain-experimental = "^0.0.56"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
